--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -116,8 +120,6 @@
             <artifactId>google-api-services-drive</artifactId>
             <version>v3-rev197-1.25.0</version>
         </dependency>
-
-
     </dependencies>
 
     <profiles>
@@ -127,7 +129,7 @@
                 <dependency>
                     <groupId>org.springframework.data</groupId>
                     <artifactId>spring-data-rest-hal-explorer</artifactId>
-                    <version>3.3.2.RELEASE</version>
+                    <version>3.2.4.RELEASE</version>
                 </dependency>
             </dependencies>
         </profile>
